# Qwen-from-scratch

./: .gitignore  .pre-commit-config.yaml  README.md  flash_attention_triton.py  hugging_face_inital_inference.py  inference.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.continue/agents/: new-config.yaml
.github/workflows/: ci.yml
examples/: attention_benchmark.py  benchmark.py  inference.py  interactive.py
model/: MODEL_CARD.md  config.json
src/: configuration_qwen2.py  flash_attention.py  modeling_flash_attention_utils.py  modeling_qwen2.py  modular_qwen2.py  tokenization_qwen2.py
tests/: test_config_load.py  test_tokenizer.py
