[metadata]
name = qwen2-local
version = 0.0.1
description = Local inference utilities for Qwen2.5
author = Dhruv Sandhu

[options]
packages = find:
package_dir =
    = src
include_package_data = True
# List your packages directly here instead of using -r
install_requires = 
    torch
    transformers
    accelerate

[options.packages.find]
where = src

[tool:pytest]
addopts = -q

[flake8]
max-line-length = 300
extend-ignore = E203